[package]
name = "bevy_rapid_qoi"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Bevy support for the QOI (Quite OK Image) format, based on rapid_qoi"
homepage = "https://github.com/celerysaltgames/bevy_rapid_qoi"
repository = "https://github.com/celerysaltgames/bevy_rapid_qoi"
readme = "README.md"
exclude = ["assets/*", "examples/*"]

[dependencies]
rapid-qoi = "0.6.1"

[dependencies.bevy]
version = "~0.12"
features = ["bevy_asset", "bevy_sprite"]

[dev-dependencies]
bevy = { version = "~0.12", default-features = true }
